#	$NetBSD: CHANGES-1.5.1,v 1.1.2.16 2000/12/31 21:30:56 jhawk Exp $

A complete list of changes from NetBSD 1.5 to NetBSD 1.5.1:

File						Revision(s)
----						--------

sys/sys/param.h					patch
sys/conf/osrelease.sh				patch
share/tmac/doc-common				patch

  Mark this as 1.5.1_ALPHA.

sys/dev/ic/an.c					1.1-1.3 + patch (new)
sys/dev/ic/anreg.h				1.1-1.2 (new)
sys/dev/ic/anvar.h				1.1 (new)
sys/dev/pcmcia/if_an_pcmcia.c			1.1-1.2 (new)
sys/dev/DEVNAMES				1.24
sys/conf/files					1.409
sys/dev/pcmcia/files.pcmcia			1.30
sys/arch/i386/conf/GENERIC			1.382
sys/arch/i386/conf/GENERIC_LAPTOP		1.7
sys/arch/i386/conf/INSTALL_LAPTOP		1.7

  Add a driver for an(4), Aironet and Cisco wireless pcmcia cards.

crypto/dist/krb4/lib/krb/tf_util.c		1.2
crypto/dist/krb4/lib/krb/kdc_reply.c		1.2
crypto/dist/krb4/lib/krb/extra.c		1.2

  Remove overwriting of the old ticket file.  Fix buffer overrun.
  Remove obsolete support for environment variables.

libexec/ftpd/cmds.c				1.9
libexec/ftpd/version.h				patch

  Fix a one-byte buffer overrun.

sys/netinet/udp_usrreq.c			1.73-1.74

  Fix multicast inbound packet processing.  Fixes PR#11629.

sys/dev/wscons/wsdisplay.c			1.43

  Make sure to switch consoles synchronously.

sys/arch/powerpc/powerpc/ofw_machdep.c		1.7

  Make memory probing work correctly with the DIMMs in any order.

distrib/atari/miniroot/install.md		1.14

  Add the X11 sets to MDSETS.

distrib/sets/lists/base/obsolete.mi		1.14

  Add /usr/sbin/gifconfig; we now do "ifconfig tunnel".

usr.sbin/dhcp/common/discover.c			1.9-1.10
usr.sbin/dhcp/common/bpf.c			1.7

  Fix multiple problems that caused dhcpd to either spin or not
  respond to queries in a timely fashion.

sys/arch/vax/conf/INSTALL			1.11

  Enable VS4000/90 SCSI controller.

sys/arch/hp300/stand/Makefile.inc		1.11

  Use ``make print-objdir'' to get obj directory correctly.

sys/dev/pci/fms.c				1.8

  Make this build without ``mpu at fms''.

usr.sbin/user/user.c				1.34
